// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Fade> -> delay] 1`] = `
Array [
  Object {
    "map": undefined,
    "name": "6rht7r",
    "next": undefined,
    "styles": "
  
  visibility: visible;
;
  opacity: 1;
",
  },
  Object {
    "map": undefined,
    "name": "4y3w39",
    "next": undefined,
    "styles": "
        transition-duration: 320ms;
      ",
  },
  Object {
    "map": undefined,
    "name": "18ctvvw",
    "next": undefined,
    "styles": "
      transition-timing-function: linear;
    ",
  },
  Object {
    "map": undefined,
    "name": "l441m1",
    "next": undefined,
    "styles": "
        transition-property: visibility, opacity;
      ",
  },
  Object {
    "map": undefined,
    "name": "1jzh3yq",
    "next": undefined,
    "styles": "
        transition-delay: 3000ms;
      ",
  },
]
`;

exports[`<Fade> -> from, to]: 0.2 1`] = `
Array [
  Object {
    "map": undefined,
    "name": "16tos9v",
    "next": undefined,
    "styles": "
        
  visibility: hidden;
;
        opacity: 0.2;
      ",
  },
  Object {
    "map": undefined,
    "name": "4y3w39",
    "next": undefined,
    "styles": "
        transition-duration: 320ms;
      ",
  },
  Object {
    "map": undefined,
    "name": "18ctvvw",
    "next": undefined,
    "styles": "
      transition-timing-function: linear;
    ",
  },
  Object {
    "map": undefined,
    "name": "l441m1",
    "next": undefined,
    "styles": "
        transition-property: visibility, opacity;
      ",
  },
]
`;

exports[`<Fade> -> from, to]: 0.8 1`] = `
Array [
  Object {
    "map": undefined,
    "name": "111t6w6",
    "next": undefined,
    "styles": "
          
  visibility: visible;
;
          opacity: 0.8;
        ",
  },
  Object {
    "map": undefined,
    "name": "4y3w39",
    "next": undefined,
    "styles": "
        transition-duration: 320ms;
      ",
  },
  Object {
    "map": undefined,
    "name": "18ctvvw",
    "next": undefined,
    "styles": "
      transition-timing-function: linear;
    ",
  },
  Object {
    "map": undefined,
    "name": "l441m1",
    "next": undefined,
    "styles": "
        transition-property: visibility, opacity;
      ",
  },
]
`;

exports[`<Fade> -> hide [controlled] 1`] = `
Array [
  Object {
    "map": undefined,
    "name": "6rht7r",
    "next": undefined,
    "styles": "
  
  visibility: visible;
;
  opacity: 1;
",
  },
  Object {
    "map": undefined,
    "name": "4y3w39",
    "next": undefined,
    "styles": "
        transition-duration: 320ms;
      ",
  },
  Object {
    "map": undefined,
    "name": "18ctvvw",
    "next": undefined,
    "styles": "
      transition-timing-function: linear;
    ",
  },
  Object {
    "map": undefined,
    "name": "l441m1",
    "next": undefined,
    "styles": "
        transition-property: visibility, opacity;
      ",
  },
]
`;

exports[`<Fade> -> hide: hidden 1`] = `
Array [
  Object {
    "map": undefined,
    "name": "1mbcvou",
    "next": undefined,
    "styles": "
  
  visibility: hidden;
;
  opacity: 0;
",
  },
  Object {
    "map": undefined,
    "name": "4y3w39",
    "next": undefined,
    "styles": "
        transition-duration: 320ms;
      ",
  },
  Object {
    "map": undefined,
    "name": "18ctvvw",
    "next": undefined,
    "styles": "
      transition-timing-function: linear;
    ",
  },
  Object {
    "map": undefined,
    "name": "l441m1",
    "next": undefined,
    "styles": "
        transition-property: visibility, opacity;
      ",
  },
]
`;

exports[`<Fade> -> hide: visible 1`] = `
Array [
  Object {
    "map": undefined,
    "name": "6rht7r",
    "next": undefined,
    "styles": "
  
  visibility: visible;
;
  opacity: 1;
",
  },
  Object {
    "map": undefined,
    "name": "4y3w39",
    "next": undefined,
    "styles": "
        transition-duration: 320ms;
      ",
  },
  Object {
    "map": undefined,
    "name": "18ctvvw",
    "next": undefined,
    "styles": "
      transition-timing-function: linear;
    ",
  },
  Object {
    "map": undefined,
    "name": "l441m1",
    "next": undefined,
    "styles": "
        transition-property: visibility, opacity;
      ",
  },
]
`;

exports[`<Fade> -> show [controlled] 1`] = `
Array [
  Object {
    "map": undefined,
    "name": "1mbcvou",
    "next": undefined,
    "styles": "
  
  visibility: hidden;
;
  opacity: 0;
",
  },
  Object {
    "map": undefined,
    "name": "4y3w39",
    "next": undefined,
    "styles": "
        transition-duration: 320ms;
      ",
  },
  Object {
    "map": undefined,
    "name": "18ctvvw",
    "next": undefined,
    "styles": "
      transition-timing-function: linear;
    ",
  },
  Object {
    "map": undefined,
    "name": "l441m1",
    "next": undefined,
    "styles": "
        transition-property: visibility, opacity;
      ",
  },
]
`;

exports[`<Fade> -> show 1`] = `
Array [
  Object {
    "map": undefined,
    "name": "6rht7r",
    "next": undefined,
    "styles": "
  
  visibility: visible;
;
  opacity: 1;
",
  },
  Object {
    "map": undefined,
    "name": "4y3w39",
    "next": undefined,
    "styles": "
        transition-duration: 320ms;
      ",
  },
  Object {
    "map": undefined,
    "name": "18ctvvw",
    "next": undefined,
    "styles": "
      transition-timing-function: linear;
    ",
  },
  Object {
    "map": undefined,
    "name": "l441m1",
    "next": undefined,
    "styles": "
        transition-property: visibility, opacity;
      ",
  },
]
`;

exports[`<Fade> -> toggle [controlled] 1`] = `
Array [
  Object {
    "map": undefined,
    "name": "6rht7r",
    "next": undefined,
    "styles": "
  
  visibility: visible;
;
  opacity: 1;
",
  },
  Object {
    "map": undefined,
    "name": "4y3w39",
    "next": undefined,
    "styles": "
        transition-duration: 320ms;
      ",
  },
  Object {
    "map": undefined,
    "name": "18ctvvw",
    "next": undefined,
    "styles": "
      transition-timing-function: linear;
    ",
  },
  Object {
    "map": undefined,
    "name": "l441m1",
    "next": undefined,
    "styles": "
        transition-property: visibility, opacity;
      ",
  },
]
`;

exports[`<Fade> -> toggle: hidden [2] 1`] = `
Array [
  Object {
    "map": undefined,
    "name": "1mbcvou",
    "next": undefined,
    "styles": "
  
  visibility: hidden;
;
  opacity: 0;
",
  },
  Object {
    "map": undefined,
    "name": "4y3w39",
    "next": undefined,
    "styles": "
        transition-duration: 320ms;
      ",
  },
  Object {
    "map": undefined,
    "name": "18ctvvw",
    "next": undefined,
    "styles": "
      transition-timing-function: linear;
    ",
  },
  Object {
    "map": undefined,
    "name": "l441m1",
    "next": undefined,
    "styles": "
        transition-property: visibility, opacity;
      ",
  },
]
`;

exports[`<Fade> -> toggle: hidden 1`] = `
Array [
  Object {
    "map": undefined,
    "name": "1mbcvou",
    "next": undefined,
    "styles": "
  
  visibility: hidden;
;
  opacity: 0;
",
  },
  Object {
    "map": undefined,
    "name": "4y3w39",
    "next": undefined,
    "styles": "
        transition-duration: 320ms;
      ",
  },
  Object {
    "map": undefined,
    "name": "18ctvvw",
    "next": undefined,
    "styles": "
      transition-timing-function: linear;
    ",
  },
  Object {
    "map": undefined,
    "name": "l441m1",
    "next": undefined,
    "styles": "
        transition-property: visibility, opacity;
      ",
  },
]
`;

exports[`<Fade> -> toggle: visible 1`] = `
Array [
  Object {
    "map": undefined,
    "name": "6rht7r",
    "next": undefined,
    "styles": "
  
  visibility: visible;
;
  opacity: 1;
",
  },
  Object {
    "map": undefined,
    "name": "4y3w39",
    "next": undefined,
    "styles": "
        transition-duration: 320ms;
      ",
  },
  Object {
    "map": undefined,
    "name": "18ctvvw",
    "next": undefined,
    "styles": "
      transition-timing-function: linear;
    ",
  },
  Object {
    "map": undefined,
    "name": "l441m1",
    "next": undefined,
    "styles": "
        transition-property: visibility, opacity;
      ",
  },
]
`;
